click events now call the same function. current tool is stored in currentmode.

--- a/introduction.html
+++ b/introduction.html
@@ -11,11 +11,10 @@
 
 <body onload=init_canvas()>
     <div id="buttons">
-        <button class="tool" id="free-pen"><img src="images/free-pen.png"></button>
+        <button class="tool" id="free-pen"><img src="images/free-pen.png" width="32" height="32"></button>
         <button class="tool" id="line-pen"><img src="images/line-pen.png"></button>
         <button class="tool" id="fountain-pen"><img src="images/fountain-pen.png"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
-
     </div>
 </body>
 
