--- a/introduction.html
+++ b/introduction.html
@@ -7,14 +7,17 @@
     </title>
     <link rel="stylesheet" href="introduction.css">
     <script src="introduction.js"></script>
+
 </head>
 
 <body onload=init_canvas()>
     <div id="buttons">
         <button class="tool" id="free-pen"><img src="images/free-pen.png" width="32" height="32"></button>
         <button class="tool" id="line-pen"><img src="images/line-pen.png"></button>
-        <button class="tool" id="chisel-pen"><img src="images/chisel-pen.png"></button>
+        <button class="tool" id="rect-tool"><img src="images/rect-tool.png"></button>
+        <button class="tool" id="circle-tool"><img src="images/circle-tool.png"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
+
     </div>
 </body>
 
