working undo redo, better comments, improved color menu.

--- a/introduction.html
+++ b/introduction.html
@@ -19,6 +19,24 @@
         <button class="tool" id="clear"><img src="images/clear.png"></button>
 
     </div>
+    <div id="colors">
+        <button class="color" id="0"></button>
+        <button class="color" id="1"></button>
+        <button class="color" id="2"></button>
+        <button class="color" id="3"></button>
+        <button class="color" id="4"></button>
+        <button class="color" id="5"></button>
+        <button class="color" id="6"></button>
+        <button class="color" id="7"></button>
+        <button class="color" id="8"></button>
+        <button class="color" id="9"></button>
+        <button class="color" id="10"></button>
+        <button class="color" id="11"></button>
+        <button class="color" id="12"></button>
+        <button class="color" id="13"></button>
+        <button class="color" id="14"></button>
+        <button class="color" id="15"></button>
+    </div>
 </body>
 
 </html>
