prepping for fill tool! also upload/download image support soon

--- a/introduction.html
+++ b/introduction.html
@@ -16,6 +16,7 @@
         <button class="tool" id="line-pen"><img src="images/line-pen.png"></button>
         <button class="tool" id="rect-tool"><img src="images/rect-tool.png"></button>
         <button class="tool" id="circle-tool"><img src="images/circle-tool.png"></button>
+        <button class="tool" id="fill-tool"><img src="images/fill-tool.png"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
 
     </div>
