this supports touch hopefully

--- a/introduction.html
+++ b/introduction.html
@@ -11,6 +11,7 @@
 </head>
 
 <body onload=init_canvas()>
+    <canvas id="mcanv"></canvas>
     <div id="buttons">
         <button title="free-pen" class="tool" id="free-pen"><img src="images/free-pen.png" width="32"
                 height="32"></button>
@@ -22,9 +23,7 @@
         <button class="tool" id="clear"><img src="images/clear.png"></button>
         <input type="file" id="upload-interface" accept="image/*" />
     </div>
-    <div id="upload-menu">
-        <p>hi?hi?hi?hi?hi?</p>
-    </div>
+
     <div id="colors">
         <button class="color" id="0"></button>
         <button class="color" id="1"></button>
