--- a/introduction.html
+++ b/introduction.html
@@ -21,9 +21,8 @@
         <button class="tool" id="fill-tool"><img src="images/fill-tool.png"></button>
         <button title="upload" class="tool" id="upload-tool"><img src="images/upload-tool.png"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
-        <input type="file" id="upload-interface" accept="image/*" />
     </div>
-
+    <input type="file" id="upload-interface" accept="image/*" />
     <div id="colors">
         <button class="color" id="0"></button>
         <button class="color" id="1"></button>
@@ -42,6 +41,16 @@
         <button class="color" id="14"></button>
         <button class="color" id="15"></button>
     </div>
+    <div id="free-pen-sub" class="sub">
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+        <button class="subtool"></button>
+    </div>
+
 </body>
 
 </html>
