--- a/introduction.html
+++ b/introduction.html
@@ -8,21 +8,30 @@
     <link rel="stylesheet" href="introduction.css">
     <script src="introduction.js"></script>
 
+
 </head>
 
 <body onload=init_canvas()>
     <canvas id="mcanv"></canvas>
     <div id="buttons">
-        <button title="free-pen" class="tool" id="free-pen"><img src="images/free-pen.png" width="32"
-                height="32"></button>
-        <button title="line-pen" class="tool" id="line-pen"><img src="images/line-pen.png"></button>
-        <button title="rect-tool" class="tool" id="rect-tool"><img src="images/rect-tool.png"></button>
+        <button class="tool" id="free-pen"><img src="images/free-pen.png" width="32" height="32"></button>
+        <button class="tool" id="line-pen"><img src="images/line-pen.png"></button>
+        <button class="tool" id="rect-tool"><img src="images/rect-tool.png"></button>
         <button class="tool" id="circle-tool"><img src="images/circle-tool.png"></button>
         <button class="tool" id="fill-tool"><img src="images/fill-tool.png"></button>
-        <button title="upload" class="tool" id="upload-tool"><img src="images/upload-tool.png"></button>
+        <button class="tool" id="select-tool"><img src="images/select-tool.png"></button>
+        <button class="tool" id="upload-tool"><img src="images/upload-tool.png"></button>
+        <button class="tool" id="pattern-tool"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
     </div>
-    <input type="file" id="upload-interface" accept="image/*" />
+    <div id="sub-menu">
+        <button class="sub-tool" id="tiny-pen"></button>
+        <button class="sub-tool" id="small-pen"></button>
+        <button class="sub-tool" id="medium-pen"></button>
+        <button class="sub-tool" id="large-pen"></button>
+    </div>
+    <input type="file" class="upload" id="u-image" accept="image/*" />
+    <input type="file" class="upload" id="u-pattern" accept="image/*" />
     <div id="colors">
         <button class="color" id="0"></button>
         <button class="color" id="1"></button>
