--- a/introduction.html
+++ b/introduction.html
@@ -24,14 +24,31 @@
         <button class="tool" id="pattern-tool"></button>
         <button class="tool" id="clear"><img src="images/clear.png"></button>
     </div>
-    <div id="sub-menu">
+    <div class="sub-menu" id="free-sub">
         <button class="sub-tool" id="tiny-pen"></button>
+        <button class="sub-tool" id="small-pen"></button>
+        <button class="sub-tool" id="medium-pen"></button>
+        <button class="sub-tool" id="large-pen"></button>
+    </div>
+    <div class="sub-menu" id="line-sub">
+        <button class="sub-tool" id="connect-line"></button>
+    </div>
+    <div class="sub-menu" id="rect-sub">
+        <button class="sub-tool" id="hollow-rect"></button>
         <button class="sub-tool" id="small-pen"></button>
         <button class="sub-tool" id="medium-pen"></button>
         <button class="sub-tool" id="large-pen"></button>
     </div>
     <input type="file" class="upload" id="u-image" accept="image/*" />
     <input type="file" class="upload" id="u-pattern" accept="image/*" />
+    <button id="current-color"></button>
+    <div id="color-menu">
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
     <div id="colors">
         <button class="color" id="0"></button>
         <button class="color" id="1"></button>
