fixed bugs with upload + mouseleave, but not finished. progress on color picker

--- a/introduction.html
+++ b/introduction.html
@@ -19,12 +19,11 @@
         <button class="tool" id="rect_tool"><img src="images/rect-tool.png"></button>
         <button class="tool" id="circle_tool"><img src="images/circle-tool.png"></button>
         <button class="tool" id="fill_tool"><img src="images/fill-tool.png"></button>
-        <button class="tool" id="select_tool"><img src="images/select-tool.png"></button>
         <button class="tool" id="upload_tool"><img src="images/upload-tool.png"></button>
         <button class="tool" id="pattern_tool"><img src="images/pattern.png"></button>
         <button class=" tool" id="clear"><img src="images/clear.png"></button>
     </div>
-    <div id="cool-gradient"></div>
+    <canvas id="cool-gradient"></canvas>
     <input type="file" class="upload" id="u-image" accept="image/*" />
     <input type="file" class="upload" id="u-pattern" accept="image/*" />
     <button id="current-color" class="color"></button>
