--- a/introduction.html
+++ b/introduction.html
@@ -20,6 +20,7 @@
         <button class="tool" id="circle_tool"><img src="images/circle-tool.png"></button>
         <button class="tool" id="fill_tool"><img src="images/fill-tool.png"></button>
         <button class="tool" id="upload_tool"><img src="images/upload-tool.png"></button>
+        <button class="tool" id="download_tool"><img src="images/download-tool.png"></button>
         <button class="tool" id="pattern_tool"><img src="images/pattern.png"></button>
         <button class=" tool" id="clear"><img src="images/clear.png"></button>
     </div>
