--- a/introduction.html
+++ b/introduction.html
@@ -6,6 +6,7 @@
         above a hello world
     </title>
     <link rel="stylesheet" href="introduction.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="introduction.js"></script>
 
 
