update README and title

--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        above a hello world
+        Draw
     </title>
     <link rel="stylesheet" href="introduction.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
